--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1734,6 +1734,7 @@
         font-size: 3.5rem;
         font-weight: 900;
         margin-bottom: 0;
+        margin-top: 5%;
         color: white;
         text-transform: uppercase;
         letter-spacing: 2px;
@@ -2214,7 +2215,7 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
-        z-index: 10;
+        z-index: 999;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         transition: all 0.3s ease;
     }
@@ -2232,14 +2233,15 @@
 
     @media (max-width: 768px) {
         .flames-popup-container {
-            width: 95%;
+            width: 90%;
         }
 
         .flames-popup-close {
-            top: -15px;
-            right: -15px;
+            top: -30px;
+            right: -9px;
             width: 35px;
             height: 35px;
+            z-index: 999;
             font-size: 16px;
         }
     }
