--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -413,8 +413,7 @@
                                 <span>
                                     <i class="ti ti-flame"></i>
                                 </span>
-                                <span class="hide-menu">Summers😎</span>
-
+                                <span class="hide-menu">Summer Training😎</span>
                             </a>
                         </li>
 
@@ -919,7 +918,7 @@
             document.body.classList.add('page-loaded');
         });
     </script>
-    <!-- 
+    
     <script>
         document.onkeydown = function (e) {
             if (event.keyCode == 123) {
@@ -935,7 +934,7 @@
                 return false;
             }
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
