updated sudents side for context menu

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -362,7 +362,7 @@
 
 <!-- oncontextmenu="return false" -->
 
-<body style="background-attachment: fixed;">
+<body style="background-attachment: fixed;" oncontextmenu="return false">
     <!--  Body Wrapper -->
     <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
         data-sidebar-position="fixed" data-header-position="fixed">
