--- a/templates/administration/flames/course_detail.html
+++ b/templates/administration/flames/course_detail.html
@@ -487,8 +487,8 @@
                         {% for registration in registrations|slice:":15" %}
                         <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                             <div>
-                                <h6 class="mb-0">{{ registration.full_name }}</h6>
-                                <small class="text-muted">{{ registration.email }}</small>
+                                <h6 class="mb-0">{{ registration.user.first_name }} {{ registration.user.last_name }}</h6>
+                                <small class="text-muted">{{ registration.user.email|truncatechars:30 }}</small>
                             </div>
                             <div class="text-end">
                                 <small class="d-block text-muted">{{ registration.created_at|date:"d M Y" }}</small>
