--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -919,7 +919,7 @@
         });
     </script>
     
-    <script>
+    <!-- <script>
         document.onkeydown = function (e) {
             if (event.keyCode == 123) {
                 return false;
@@ -934,7 +934,7 @@
                 return false;
             }
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
